--- a/grid.css
+++ b/grid.css
@@ -91,31 +91,28 @@ form { display: grid;grid-template-columns: repeat(8, [col] 75px);}
 	width:600px;
 	border-radius: 10px;
 }
-
 .grid12_5 {
 	grid-template-columns: repeat(12, [col] 50px);
 	grid-template-rows: 50px 450px 50px 50px 50px 50px;
 }
-.grid12_20 {
+.grid12_20_pwm {
 	grid-template-columns: repeat(12, [col] 50px);
-	grid-template-rows: repeat(20, [row] 50px);
+	grid-template-rows: repeat(22, [row] 50px);
 }
-.grid10_21 {
-	grid-template-columns: repeat(10, [col] 60px);
-	grid-template-rows: repeat(21, [row] 50px);
+.grid12_20_rel {
+	grid-template-columns: repeat(12, [col] 50px);
+	grid-template-rows: repeat(19, [row] 50px) 35px 25px 35px 25px  repeat(3, [row] 50px);
 }
-.grid8_20_1 {
-	grid-template-columns: repeat(8, [col] 75px);
-	grid-template-rows: repeat(12, [row] 50px) 35px 25px 35px 25px  repeat(3, [row] 50px);
+
+.grid12_20_opt {
+	grid-template-columns: repeat(12, [col] 50px);
+	grid-template-rows: repeat(8, [row] 50px) 35px 25px repeat(3, [row] 50px);
 }
 .grid8_20_2 {
 	grid-template-columns: repeat(8, [col] 75px);
 	grid-template-rows: repeat(15, [row] 50px);
 }
 
-/*
-.grid8_15 {grid-template-columns: repeat(8, [col] 75px);grid-template-rows: repeat(15, [row] 40px);}
-*/
 .alignCenter {display:flex;align-items: center;justify-content: center;text-align:center;}
 .alignLeft {display:flex;align-items: center;justify-content: left;text-align:left;}
 .alignRight {display:flex;align-items: center;justify-content: right;text-align:right;}
@@ -147,7 +144,6 @@ form { display: grid;grid-template-columns: repeat(8, [col] 75px);}
 .gridRelay {
 	border:1px solid #36343361;
 	font-size::18px;background-color: #E9ECEF;
-	grid-column: span 1;
 	text-align:center;
 	display: flex;
 	align-items: center;
