--- a/grid.css
+++ b/grid.css
@@ -70,7 +70,10 @@ input {font-size:18px;display:flex;align-items: center;justify-content: right;te
 
 input[type=submit]:hover {background-color:black;}
 input[type=submit], #rst_c {cursor: pointer;}
-input[type=date], input[type=time] {background-color:white;}
+input[type=date], input[type=time] {
+	background-color:white; 
+	width:100%;
+}
 #Button01, #Button02 {cursor: pointer;}
 .select {
 	font-size:18px;
