--- a/grid.css
+++ b/grid.css
@@ -67,11 +67,12 @@ input:focus::placeholder {
 input {
 	font-size:18px;
 	display:flex;
-	align-items: center;
-	justify-content: right;
+	align-items:center;
+	justify-content:right;
 	text-align:right;	
 	border:0.2px solid #36343361;
 	max-width:100%;
+	box-sizing:border-box;
 }
 
 input[type=submit]:hover {background-color:black;}
