--- a/grid.css
+++ b/grid.css
@@ -72,13 +72,14 @@ input {
 	text-align:right;	
 	border:0.2px solid #36343361;
 	max-width:100%;
-	box-sizing:border-box;
+/* 	box-sizing:border-box; */
 }
 
 input[type=submit]:hover {background-color:black;}
 input[type=submit], #rst_c {cursor: pointer;}
 input[type=date], input[type=time] {
-	background-color:white; 	
+	background-color:white;
+	width:100&;
 }
 #Button01, #Button02 {cursor: pointer;}
 .select {
