--- a/grid.css
+++ b/grid.css
@@ -72,7 +72,7 @@ input {
 	text-align:right;	
 	border:0.2px solid #36343361;
 	max-width:100%;
-/* 	box-sizing:border-box; */
+	padding-right:10px;
 }
 
 input[type=submit]:hover {background-color:black;}
