--- a/grid.css
+++ b/grid.css
@@ -80,6 +80,9 @@ input[type=date], input[type=time] {
 	background-color:white;
 	width:100%;
 }
+input[type=number], input[type=text], input[type=password]  {
+	padding-right:10px;
+}
 #Button01, #Button02 {cursor: pointer;}
 .select {
 	font-size:18px;
