--- a/grid.css
+++ b/grid.css
@@ -187,6 +187,8 @@ form { display: grid;grid-template-columns: repeat(8, [col] 75px);}
 	font-size:18px;
 	border:0.2px solid #36343361;
 	background-color: #E9ECEF;
+	text-align:left;
+	padding-left:10px;	
 }
 .selectText {
 	font-size:18px;
