--- a/grid.css
+++ b/grid.css
@@ -31,6 +31,7 @@ input:focus::placeholder {
 	padding:0;
 	margin:0;
 	font-family: "Times New Roman";	
+	box-sizing: border-box;
 }
 /*
  #fan_svg {
@@ -59,6 +60,7 @@ input:focus::placeholder {
 /* #graphdiv2 {
     z-index: 50;
 } */
+
 .notVisible {
   visibility: hidden;
 }
