--- a/grid.css
+++ b/grid.css
@@ -78,7 +78,9 @@ input {
 	text-align:center;
 	color:white;
 }
-
+input[type=number] {
+	padding-right:10px;
+}
 input[type=submit]:hover {background-color:black;}
 input[type=submit], #rst_c {cursor: pointer;}
 
