--- a/grid.css
+++ b/grid.css
@@ -81,6 +81,9 @@ input {
 input[type=number] {
 	padding-right:10px;
 }
+input[type=date], input[type=time] {
+	background-color: #ffffff;
+}
 input[type="number"]::-webkit-inner-spin-button, 
 input[type="number"]::-webkit-outer-spin-button { 
 	-webkit-appearance: none; margin: 0; 
