--- a/grid.css
+++ b/grid.css
@@ -71,6 +71,7 @@ input {
 	text-align:right;	
 	border:0.2px solid #36343361;
 	max-width:100%;
+	background-color: #ffffff;
 }
 #text_pwm1, #text_pwm2, #text_pwm3, #text_pwm4, #text_pwm5, #text_pwm6 {
 	border:0px;	
@@ -81,7 +82,7 @@ input {
 input[type=number] {
 	padding-right:10px;
 }
-input[type=date], input[type=time] {
+select {
 	background-color: #ffffff;
 }
 input[type="number"]::-webkit-inner-spin-button, 
